<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TATupload</string>
    <string name="ss_name">Name for new spreadsheet: </string>
    <string name="confirm_checkbox">Queue all new messages</string>
    <string name="clear_queue_button">Clear queue</string>
    <string name="queue_title">Messages to process:</string>
    <string name="message_number">Sender\'s number:</string>
    <string name="message_time">Time received:</string>
    <string name="message_body">Message:</string>
    <string name="message_question">Question:</string>
    <string name="message_location">Location:</string>
    <string name="message_toastie">Toastie:</string>
    <string name="upload">Upload</string>
    <string name="undo_changes">Undo changes</string>
    <string name="discard">Discard text</string>
    <string name="title_activity_sms_review">Message Review</string>
    <string name="text_a_toastie">Text a toastie</string>
    <string name="accept">Accept</string>
    <string name="change_form_id">Change form</string>
    <string name="start">Start TAT</string>
    <string name="stop">Stop TAT</string>
    <string name="settings">Settings</string>
    <string name="preference_file_key">uk.org.sucu.tatupload.PREFERENCE_FILE_KEY</string>
    <string name="form_name_key">uk.org.sucu.tatupload.formName</string>
    <string name="processing_key">uk.org.sucu.tatupload.processing</string>
    <string name="confirm_split_key">uk.org.sucu.tatupload.confirmSplit</string>
    <string name="tutorial_ver_key">uk.org.sucu.tatupload.tutorialVersion</string>
    <string name="pending_text_list_key">uk.org.sucu.tatupload.savedTextsList</string>
    <string name="show_notification_key">uk.org.sucu.tatupload.showNotifications</string>
    <string name="processed_text_list_key">uk.org.tatupload.processedTextList</string>
    <string name="scriptURL">https://script.google.com/macros/s/AKfycbzlHUVyYLlB6oWRCUomhNKBNVfsXD1fPJH61D_RsY8R1uhKmpNz/exec</string>
    <string name="parameter_indicator">uk.org.sucu.tatupload.PARAMETER</string>
    <string name="flavour_parameter">uk.org.sucu.tatupload.FLAVOUR_PARAMETER</string>
    <string name="question_parameter">uk.org.sucu.tatupload.QUESTION_PARAMETER</string>
    <string name="location_parameter">uk.org.sucu.tatupload.LOCATION_PARAMETER</string>
    <string name="flavour_heading">Toastie flavours</string>
    <string name="question_heading">Question identifiers</string>
    <string name="location_heading">Delivery locations</string>
    <string name="invalid_heading">Invalid Parameter, you shouldn\'t see this.</string>
    <string name="restore_defaults">Restore default parameters</string>
    <string name="change_label">Change to:</string>
    <string name="change_param">Change</string>
    <string name="remove_param">Remove</string>
    <string name="add_param">Add</string>
    <string name="param_load_error">Unable to load stored parameter data. Check the settings are correct before running TAT</string>
    <string name="title_activity_tutorial">Initial Setup</string>
    <string name="first_run_tutorial">Welcome to TATupload. Before starting, please enter the names of toastie flavours you will be using, as well as major delivery locations, such as names of halls of residence.</string>
    <string name="tutorial_done">Done</string>
    <string name="flavour_explanation">The toastie fillings being offered.</string>
    <string name="location_explanation">One of these words marks a sentence as containing a location.</string>
    <string name="question_explanation">One of these marks a sentence as containing a question.</string>
    <string name="tutorial_info">TATupload puts data into a google drive spreadsheet using web links opened in a browser. Spreadsheets are created in the drive of the google account signed into that browser.</string>
    <string name="tutorial_info2">Please select which browser TATupload should use to open web links. This can be changed later in the settings menu.</string>
    <string name="web_browser">Web Browser</string>
    <string name="confirm_choice">Are you sure?</string>
    <string name="browser_package_key">uk.org.sucu.tatupload.browserPackage</string>
    <string name="browser_name_key">uk.org.sucu.tatupload.browserName</string>
	<string name="browser">Browser</string>
	<string name="browser_description">The browser to upload messages with</string>
	<string name="chrome_warning">Warning! Chrome will not open links when the phone is sleeping. This can cause messages to be lost from TATupload. It should not be used.</string>
	<string name="used_key">uk.org.sucu.tatupload.usedBefore</string>
	<string name="no">No</string>
	<string name="icon_description">App icon</string>
	<string name="processing_texts">Processing incoming texts</string>
	<string name="no_queued_messages">No queued messages</string>
	<string name="one_queued_message">1 queued message</string>
	<string name="_queued_messages">" queued messages"</string>
	<string name="action_icon_desc">Process message</string>
	<string name="queue_explanation">Tap a queued message to review, and upload or delete it.</string>
	<string name="uploaded">uploaded messages</string>
	<string name="unprocessed">new messages</string>
    <string name="store_processed_key">uk.org.sucu.tatupload.storeProcessed</string>
    <string name="store_processed_title">Store uploaded messages</string>
    <string name="store_processed_desc">For review or reuploading</string>
    <string name="bundle_key_tab_selected">uk.org.sucu.tatupload.selectedTabKey</string>
    <string name="show_notification_title">Show notification</string>
    <string name="show_notification_desc">Summarising the app status</string>
    <string name="parameter_category_title">Data extraction parameters</string>
	<string-array name="default_flavours">
        <item>ham</item>
        <item>cheese</item>
        <item>tomato</item>
        <item>pineapple</item>
    </string-array>
	<string-array name="default_locations">
	    <item>library</item>
        <item>bar</item>
        <item>pub</item>
        <item>club</item>
        <item>road</item>
        <item>rd</item>
        <item>avenue</item>
        <item>gardens</item>
        <item>street</item>
        <item>st</item>
        <item>crescent</item>
        <item>terrace</item>
        <item>block</item>
        <item>flat</item>
        <item>floor</item>
        <item>room</item>
    </string-array>
    <string-array name="default_questions">
        <item>who</item>
        <item>what</item>
        <item>where</item>
        <item>when</item>
        <item>why</item>
        <item>could</item>
        <item>would</item>
        <item>should</item>
        <item>\?</item>
    </string-array>
</resources>
