<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/confirm_split_key"
        android:title="@string/confirm_checkbox" />
    
    <CheckBoxPreference 
        android:defaultValue="true"
        android:key="@string/show_notification_key"
        android:title="Show notification"
        android:summary="summarising the app status"/>
    
    <Preference android:title="@string/web_browser"
        android:summary="@string/browser_description"
        android:key="@string/browser" />

    <PreferenceCategory 
        android:title="Data extraction parameters">
    
    <Preference android:title="@string/flavour_heading" >
        <intent 
            android:action="android.intent.action.VIEW"
			android:targetPackage="uk.org.sucu.tatupload"
            android:targetClass="uk.org.sucu.tatupload.activity.ParameterViewActivity" >
            <extra
                android:name="@string/parameter_indicator"
                android:value="@string/flavour_parameter" />
        </intent>	

    </Preference>

    <Preference android:title="@string/location_heading" >
        <intent 
            android:action="android.intent.action.VIEW"
			android:targetPackage="uk.org.sucu.tatupload"
            android:targetClass="uk.org.sucu.tatupload.activity.ParameterViewActivity" >
            <extra
                android:name="@string/parameter_indicator"
                android:value="@string/location_parameter" />
        </intent>	

    </Preference>
    
    <Preference android:title="@string/question_heading" >
        <intent 
            android:action="android.intent.action.VIEW"
			android:targetPackage="uk.org.sucu.tatupload"
            android:targetClass="uk.org.sucu.tatupload.activity.ParameterViewActivity" >
            <extra
                android:name="@string/parameter_indicator"
                android:value="@string/question_parameter" />
        </intent>	

    </Preference>
    
    </PreferenceCategory>
    
</PreferenceScreen>