<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_run_tutorial" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/tutorial_toastie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavour_heading"
            android:onClick="setupFlavours" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/flavour_explanation" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/tutorial_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_heading"
            android:onClick="setupLocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location_explanation" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_info" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/tutorial_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="done"
            android:text="@string/tutorial_done" />
    </LinearLayout>

</ScrollView>